--- a/auctions/templates/auctions/createlisting.html
+++ b/auctions/templates/auctions/createlisting.html
@@ -1,11 +1,11 @@
 {% extends "auctions/layout.html" %}
 
 {% block body %}
-    <h2>Create a New Listings</h2>
+    <h2>Create a New Listing</h2>
 
-    <form method="post">
+    <form action="" method="POST">
         {% csrf_token %}
-        {{ createForm }}
-    <input type="submit" value="Create"
+        {{ create_listing_form.as_p }}
+    <input type="submit" value="Create">
     </form>
 {% endblock %}
