working create listing forms

--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -3,5 +3,8 @@
 {% block body %}
     <h2>Active Listings</h2>
 
-    TODO
+    <ul>
+        <!--{% for listing in active_listings %}
+        <li><a href=""> {{ listing.id }}: {{ listing.item }} </a></li>
+    </ul>
 {% endblock %}
