--- a/auctions/templates/auctions/createlisting.html
+++ b/auctions/templates/auctions/createlisting.html
@@ -6,6 +6,7 @@
     <form action="" method="POST">
         {% csrf_token %}
         {{ create_listing_form.as_p }}
-    <input type="submit" value="Create">
+    <input type="submit" value="Create a listing">
     </form>
+
 {% endblock %}
