fx for add to watchlist

--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -50,12 +50,15 @@
           <button type="submit">Close Listing</button>
         </form>
       {% else %}
-        <p>Item owned by{{ listing.item.owner_id|default_if_none:"None"|default:"Unknown" }}</p>
+        <p>Item owned by {{ listing.item.owner_id|default_if_none:"None"|default:"Unknown" }}</p>
       {% endif %}
+
+      {% if watchlist.listingid.listing_id == listing.item.id %}
        <!-- Watchlist form -->
-        <form>
-          <a href=""><button>Save to {{ user.username }}'s watchlist</button></a>
-        </form>
+        <a href="{% url 'add_watchlist' item_id=listing.item.id %}"><button>Save to {{ user.username }}'s watchlist</button></a>
+      {% else %}
+        <a href="{% url 'remove_watchlist' item_id=listing.item.id %}"><button>Remove from my watchlist</button></a>        
+      {% endif %}
         <!-- Make a bid -->
         <form action="" method="POST">
           <input type="submit" value="Make a bid">
