--- a/auctions/templates/auctions/createlisting.html
+++ b/auctions/templates/auctions/createlisting.html
@@ -2,7 +2,8 @@
 
 {% block body %}
     <h2>Create a New Listing</h2>
-
+    <p>You must be logged in to create a listing.</p>
+    <hr class="solid">
     <form action="" method="POST">
         {% csrf_token %}
         {{ create_listing_form.as_p }}
