--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -8,15 +8,10 @@
         <link href="{% static 'auctions/styles.css' %}" rel="stylesheet">
     </head>
     <body>
-        <h1>Auctions</h1>
-        <div>
-            {% if user.is_authenticated %}
-                Signed in as <strong>{{ user.username }}</strong>.
-            {% else %}
-                Not signed in.
-            {% endif %}
-        </div>
         <ul class="nav">
+            <li class="nav-item">            
+                <img src="https://png.pngtree.com/png-clipart/20221110/original/pngtree-diamond-logo-template-vector-icon-illustration-design-free-logo-design-template-picture-image_3626181.png" width="56" height="20">
+            </li>
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'createlisting' %}">Create a New Listing</a>
             </li>
@@ -41,6 +36,12 @@
                     <a class="nav-link" href="{% url 'register' %}">Register</a>
                 </li>
             {% endif %}
+            <li>        
+                {% if user.is_authenticated %}
+                <a class="nav-link" href="">Signed in as <strong>{{ user.username }}</strong></a>
+                {% else %}
+                <a class="nav-link" href="{% url 'login' %}">Not signed in - Log In.</a>
+                {% endif %}
         </ul>
         <hr>
         {% block body %}
