--- a/auctions/templates/auctions/remove_watchlist.html
+++ b/auctions/templates/auctions/remove_watchlist.html
@@ -2,16 +2,9 @@
 
 {% block body %}
 
-
-<div class="listing">
-  <div class="listing-info">
-    <h1> The item has been successfully removed from your watchlist</h1>
-    
-
-  <div class="listing-image">
-  </div>
-
-
-  
+<div>
+  <h1> The {{ listing.item.title }} removed to your watchlist</h1>
+  <p> Go to the <a href="{% url 'watchlist' %}"> watchlist section </a> to see your watchlist</p>
+</div>
 
 {% endblock %}
