--- a/auctions/templates/auctions/watchlist.html
+++ b/auctions/templates/auctions/watchlist.html
@@ -4,7 +4,7 @@
   <h1>{{ user.username }}'s watchlist</h1>
   {% for watchlist in user.watchlist_set.all %}
     {% for listing in watchlist.listingid.all %}
-    <a href="{% url 'listing' listing.id %}"><p>{{ listing.item.title }}</p></a>
+    <a href="{% url 'listing' listing.id %}"><p>#{{ listing.id }} - {{ listing.item.title }}</a></li>
     {% endfor %}
   {% endfor %}
   {% endblock %}
