+bids model, +layout styling

--- a/auctions/templates/auctions/add_bid.html
+++ b/auctions/templates/auctions/add_bid.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@latest/css/bulma.min.css">
 
 <div class="container">
-    <h2 class="title is-2"> Your bid has been saved</h2>
+    <h2 class="title is-2"> Your bid of {{ current_bid }} has been saved</h2>
     <p>Press back to go back to the listing</p>
 </div>
 
