--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -5,13 +5,13 @@
     <head>
         <title>{% block title %}Auctions{% endblock %}</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@latest/css/bulma.min.css">
         <link href="{% static 'auctions/styles.css' %}" rel="stylesheet">
     </head>
     <body>
+    <div class="container">
+        <img src="https://png.pngtree.com/png-clipart/20221110/original/pngtree-diamond-logo-template-vector-icon-illustration-design-free-logo-design-template-picture-image_3626181.png" width="56" height="20">
         <ul class="nav">
-            <li class="nav-item">            
-                <img src="https://png.pngtree.com/png-clipart/20221110/original/pngtree-diamond-logo-template-vector-icon-illustration-design-free-logo-design-template-picture-image_3626181.png" width="56" height="20">
-            </li>
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'createlisting' %}">Create a New Listing</a>
             </li>
@@ -46,5 +46,6 @@
         <hr>
         {% block body %}
         {% endblock %}
+        </div>
     </body>
 </html>
