--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -40,7 +40,7 @@
                 {% if user.is_authenticated %}
                 <a class="nav-link" href="">Signed in as <strong>{{ user.username }}</strong></a>
                 {% else %}
-                <a class="nav-link" href="{% url 'login' %}">Not signed in - Log In.</a>
+                <a class="nav-link" href="{% url 'login' %}">Not signed in</a>
                 {% endif %}
         </ul>
         <hr>
