+logic for closed listings, +past listings page

--- a/auctions/templates/auctions/categories.html
+++ b/auctions/templates/auctions/categories.html
@@ -1,7 +1,7 @@
 {% extends "auctions/layout.html" %}
 
 {% block body %}
-  <h1>All Categories</h1>
+  <h2 class="title is-2">All Categories</h2>
   <ul>
     {% for category in categories %}
       <li><a href="{% url 'category_detail' category.category %}">{{ category.category.title }}</a></li>
