--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -50,7 +50,7 @@
     {% endif %}
     <article class="message is-info">
       <div class="message-body">
-        <p>Highest Bid: £{{ listing.highestbid }}
+        <p>Highest bid so far: £{{ listing.highestbid }}
         </div>
     </article>
   </div>
