--- a/auctions/templates/auctions/watchlist.html
+++ b/auctions/templates/auctions/watchlist.html
@@ -1,7 +1,7 @@
 {% extends "auctions/layout.html" %}
 
 {% block body %}
-  <h1>{{ user.username }}'s watchlist</h1>
+  <h2 class="title is-2">{{ user.username }}'s watchlist</h2>
   {% for watchlist in user.watchlist_set.all %}
     {% for listing in watchlist.listingid.all %}
     <a href="{% url 'listing' listing.id %}"><p>#{{ listing.id }} - {{ listing.item.title }}</a></li>
